# drf_LMS_system

./: lms.json  manage.py  pyproject.toml
drf_LMS_system/: asgi.py  settings.py  urls.py  wsgi.py
lms/: models.py  serializers.py  urls.py  views.py
lms/migrations/: 0001_initial.py  0002_payment.py
users/: models.py
users/migrations/: 0001_initial.py
